bk_ida/gccida/g0/emit_block_move
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2091:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2092:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2093:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2094:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2095:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2096:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2097:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2098:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2100:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2101:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2102:5: error: expected ';' after expression
tree v20; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2102:6: error: use of undeclared identifier 'v20'; did you mean 'v10'?
tree v20; // rax 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2092:14: note: 'v10' declared here
machine_mode v10; // edx 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2116:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code code; // [rsp+3Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2117:5: error: expected ';' after expression
tree call_expr; // [rsp+40h] [rbp-50h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2117:6: error: use of undeclared identifier 'call_expr'; did you mean 'save_expr'?
tree call_expr; // [rsp+40h] [rbp-50h] 
     ^~~~~~~~~
     save_expr
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/tree.h:2528:13: note: 'save_expr' declared here
extern tree save_expr                   PARAMS ((tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2118:5: error: expected ';' after expression
tree v37; // [rsp+48h] [rbp-48h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2118:6: error: use of undeclared identifier 'v37'
tree v37; // [rsp+48h] [rbp-48h] 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2119:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *fntype; // [rsp+50h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/expr.c:2123:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+74h] [rbp-1Ch] 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_block_move/src/obj/expr.o] Error 1
